# betaflight-python

./: .gitignore  .gitmodules  BUILD.md  README.md  build.py  build.sh  hatch_config.py  pyproject.toml
betaflight/: __init__.py  gamepad.py  simulator.py  simulator_l2f.py  sitl.py  websockify_proxy.py
examples/: example-l2f.py  example.py  gamepad_mapping.json
